# Comp100-ps5v2

practical-1-the-shell-yusufbuzut-master/: README.md  instructions.md  last-modified.tx  main.sh
practical-2-shell-tools-and-scripting-yusufbuzut-main/: check_mystic.sh
practical-4-new-yusufbuzut-master/: Instructions.md  README.md  download.sh  main.sh
practical-5-yusufbuzut-master/: Instructions.md  LinuxPool_VPN.md  main.sh
ps0-yusufbuzut-master/: README.md  instructions.md  main.py
ps1-yusufbuzut-main/: Instructions.md  README.md  ps1a.py  ps1b.py  ps1c.py  ps1d.py
ps2-yusufbuzut-master/: Instructions.md  README.md  gameplay.txt  main.py  proverbs.txt
ps3-5-yusufbuzut-master/: grid.py  instructions.md
ps3final-yusufbuzut-master/: Instructions.md  README.md  main.py  pyproject.toml  test_ps3.py
ps3final-yusufbuzut-master/data/: animals.txt  cities.txt  names.txt
ps3final-yusufbuzut-master/test_inputs/: play_game_test1.txt  play_game_test2.txt  play_hand_test2.txt  play_hand_test3.txt  play_hand_test4.txt  play_hand_test5.txt  play_hand_test6.txt
ps4-yusufbuzut-master/: README.md  instructions.md  main.py  substitution.py  test_cases.py  vigenere.py
ps5v2-yusufbuzut-master/ps5v2-yusufbuzut-master/: Instructions.md  README.md  curr.py  curr_database.py  curr_parser.py  main.py  output.txt  pyproject.toml  test_ps5.py  triggers.py  triggers.txt
